fix: Correct dark mode colors for date picker (#406)

--- a/packages/design-system/src/custom/_forms.scss
+++ b/packages/design-system/src/custom/_forms.scss
@@ -125,7 +125,6 @@ input::placeholder {
 
   & .cell {
     max-width: min-content;
-    background-color: var(--bs-white);
 
     &:not(.disabled) {
       cursor: pointer;
